--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,33 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==24.2.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+datasets==3.0.1
+dill==0.3.8
+filelock==3.16.1
+frozenlist==1.4.1
+fsspec==2024.6.1
+huggingface-hub==0.25.2
+idna==3.10
+multidict==6.1.0
+multiprocess==0.70.16
 numpy==2.1.2
+packaging==24.1
+pandas==2.2.3
+pillow==11.0.0
+propcache==0.2.0
+pyarrow==17.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+six==1.16.0
+tqdm==4.66.5
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+xxhash==3.5.0
+yarl==1.15.3
