--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ aiohttp==3.10.10
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==24.2.0
+black==24.10.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
 datasets==3.0.1
 dill==0.3.8
 filelock==3.16.1
@@ -12,12 +14,31 @@ frozenlist==1.4.1
 fsspec==2024.6.1
 huggingface-hub==0.25.2
 idna==3.10
+Jinja2==3.1.4
+MarkupSafe==3.0.1
+mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
+mypy-extensions==1.0.0
+networkx==3.4.1
 numpy==2.1.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 packaging==24.1
 pandas==2.2.3
+pathspec==0.12.1
 pillow==11.0.0
+platformdirs==4.3.6
 propcache==0.2.0
 pyarrow==17.0.0
 python-dateutil==2.9.0.post0
@@ -25,7 +46,12 @@ pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
 six==1.16.0
+sympy==1.13.1
+tomli==2.0.2
+torch==2.5.0
+torchvision==0.20.0
 tqdm==4.66.5
+triton==3.1.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
