--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,76 @@
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
+anyio==4.6.2.post1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
 async-timeout==4.0.3
 attrs==24.2.0
+babel==2.16.0
+beautifulsoup4==4.12.3
 black==24.10.0
+bleach==6.1.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
+comm==0.2.2
 datasets==3.0.1
+debugpy==1.8.7
+decorator==5.1.1
+defusedxml==0.7.1
 dill==0.3.8
+exceptiongroup==1.2.2
+executing==2.1.0
+fastjsonschema==2.20.0
 filelock==3.16.1
+fqdn==1.5.1
+frozendict==2.4.6
 frozenlist==1.4.1
 fsspec==2024.6.1
+h11==0.14.0
+html5lib==1.1
+httpcore==1.0.6
+httpx==0.27.2
 huggingface-hub==0.25.2
 idna==3.10
+ipykernel==6.29.5
+ipython==8.28.0
+isoduration==20.11.0
+jedi==0.19.1
 Jinja2==3.1.4
+json5==0.9.25
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+lxml==5.3.0
 MarkupSafe==3.0.1
+matplotlib-inline==0.1.7
+mistune==3.0.2
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
+multitasking==0.0.11
 mypy-extensions==1.0.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.4.1
+notebook==7.2.2
+notebook_shim==0.2.4
 numpy==2.1.2
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
@@ -34,26 +84,59 @@ nvidia-cusparse-cu12==12.3.1.170
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
 pathspec==0.12.1
+peewee==3.17.7
+pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
 propcache==0.2.0
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyarrow==17.0.0
+pycparser==2.22
+Pygments==2.18.0
 python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
 pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
 requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.20.0
+Send2Trash==1.8.3
 six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
+stack-data==0.6.3
 sympy==1.13.1
+terminado==0.18.1
+tinycss2==1.3.0
 tomli==2.0.2
 torch==2.5.0
 torchvision==0.20.0
+tornado==6.4.1
 tqdm==4.66.5
+traitlets==5.14.3
 triton==3.1.0
+types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
 tzdata==2024.2
+uri-template==1.3.0
 urllib3==2.2.3
+wcwidth==0.2.13
+webcolors==24.8.0
+webencodings==0.5.1
+websocket-client==1.8.0
 xxhash==3.5.0
 yarl==1.15.3
+yfinance==0.2.45
