wip - testing obsidian reader

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,73 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+annotated-types==0.7.0
 anyio==4.7.0
 appnope==0.1.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
+asgiref==3.8.1
 asttokens==3.0.0
 async-lru==2.0.4
 attrs==24.2.0
 babel==2.16.0
+backoff==2.2.1
+bcrypt==4.2.1
 beautifulsoup4==4.12.3
 black==24.10.0
 bleach==6.2.0
+build==1.2.2.post1
+cachetools==5.5.1
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
 click==8.1.7
+coloredlogs==15.0.1
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
+dataclasses-json==0.6.7
 debugpy==1.8.9
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.18
+dirtyjson==1.0.8
+distro==1.9.0
+durationpy==0.9
 executing==2.1.0
+fastapi==0.115.7
 fastjsonschema==2.21.1
 filelock==3.16.1
+filetype==1.2.0
+flatbuffers==25.1.24
 fonttools==4.55.2
 fqdn==1.5.1
+frozenlist==1.5.0
 fsspec==2024.10.0
 gensim==4.3.3
+google-auth==2.38.0
+googleapis-common-protos==1.66.0
+greenlet==3.1.1
+grpcio==1.70.0
 h11==0.14.0
 httpcore==1.0.7
+httptools==0.6.4
 httpx==0.28.0
+huggingface-hub==0.28.0
+humanfriendly==10.0
 idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.5.2
 ipykernel==6.29.5
 ipython==8.30.0
 ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.4
+jiter==0.8.2
 joblib==1.4.2
 json5==0.10.0
 jsonpointer==3.0.0
@@ -55,11 +86,35 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.7
+kubernetes==32.0.0
+llama-cloud==0.1.11
+llama-index==0.12.14
+llama-index-agent-openai==0.4.3
+llama-index-cli==0.4.0
+llama-index-core==0.12.14
+llama-index-embeddings-huggingface==0.5.1
+llama-index-embeddings-openai==0.3.1
+llama-index-indices-managed-llama-cloud==0.6.4
+llama-index-llms-ollama==0.5.0
+llama-index-llms-openai==0.3.14
+llama-index-multi-modal-llms-openai==0.4.2
+llama-index-program-openai==0.3.1
+llama-index-question-gen-openai==0.3.0
+llama-index-readers-file==0.4.4
+llama-index-readers-llama-parse==0.4.0
+llama-index-readers-obsidian==0.4.0
+llama-parse==0.5.20
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.26.0
 matplotlib==3.9.3
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mistune==3.0.2
+mmh3==5.1.0
+monotonic==1.6
 mpmath==1.3.0
+multidict==6.1.0
 mypy-extensions==1.0.0
 nbclient==0.10.1
 nbconvert==7.16.4
@@ -70,6 +125,21 @@ nltk==3.9.1
 notebook==7.3.1
 notebook_shim==0.2.4
 numpy==1.26.4
+oauthlib==3.2.2
+ollama==0.4.7
+onnxruntime==1.20.1
+openai==1.60.2
+opentelemetry-api==1.29.0
+opentelemetry-exporter-otlp-proto-common==1.29.0
+opentelemetry-exporter-otlp-proto-grpc==1.29.0
+opentelemetry-instrumentation==0.50b0
+opentelemetry-instrumentation-asgi==0.50b0
+opentelemetry-instrumentation-fastapi==0.50b0
+opentelemetry-proto==1.29.0
+opentelemetry-sdk==1.29.0
+opentelemetry-semantic-conventions==0.50b0
+opentelemetry-util-http==0.50b0
+orjson==3.10.15
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -79,15 +149,27 @@ pathspec==0.12.1
 pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
+plotly==5.24.1
+posthog==3.11.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.48
+propcache==0.2.1
+protobuf==5.29.3
 psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
 Pygments==2.18.0
 pyparsing==3.2.0
+pypdf==5.2.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.2
 PyYAML==6.0.2
@@ -95,34 +177,57 @@ pyzmq==26.2.0
 referencing==0.35.1
 regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==2.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.9.4
 rpds-py==0.22.3
+rsa==4.9
+safetensors==0.5.2
+scikit-learn==1.6.1
 scipy==1.13.1
 seaborn==0.13.2
 Send2Trash==1.8.3
+sentence-transformers==3.4.1
 setuptools==75.6.0
+shellingham==1.5.4
 six==1.17.0
 smart-open==7.0.5
 sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.37
 stack-data==0.6.3
+starlette==0.45.3
+striprtf==0.0.26
 sympy==1.13.3
+tenacity==9.0.0
 terminado==0.18.1
+threadpoolctl==3.5.0
+tiktoken==0.8.0
 tinycss2==1.4.0
+tokenizers==0.21.0
 torch==2.2.2
 torchvision==0.17.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+transformers==4.48.1
+typer==0.15.1
 types-python-dateutil==2.9.0.20241206
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 uri-template==1.3.0
 urllib3==2.2.3
+uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.4
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+websockets==14.2
 widgetsnbextension==4.0.13
 wrapt==1.17.0
+yarl==1.18.3
+zipp==3.21.0
