--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
 annotated-types==0.7.0
+anthropic==0.45.2
 anyio==4.7.0
 appnope==0.1.4
 argon2-cffi==23.1.0
@@ -17,6 +18,8 @@ bcrypt==4.2.1
 beautifulsoup4==4.12.3
 black==24.10.0
 bleach==6.2.0
+boto3==1.36.11
+botocore==1.36.11
 build==1.2.2.post1
 cachetools==5.5.1
 certifi==2024.8.30
@@ -69,6 +72,7 @@ isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.4
 jiter==0.8.2
+jmespath==1.0.1
 joblib==1.4.2
 json5==0.10.0
 jsonpointer==3.0.0
@@ -96,6 +100,7 @@ llama-index-core==0.12.14
 llama-index-embeddings-huggingface==0.5.1
 llama-index-embeddings-openai==0.3.1
 llama-index-indices-managed-llama-cloud==0.6.4
+llama-index-llms-anthropic==0.6.4
 llama-index-llms-ollama==0.5.0
 llama-index-llms-openai==0.3.14
 llama-index-multi-modal-llms-openai==0.4.2
@@ -186,6 +191,7 @@ rfc3986-validator==0.1.1
 rich==13.9.4
 rpds-py==0.22.3
 rsa==4.9
+s3transfer==0.11.2
 safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.13.1
